Word wrap issue in playlist descriptot fixed

--- a/playlists.css
+++ b/playlists.css
@@ -75,4 +75,5 @@
 
 .playlist_description{
   display:none;
+  word-wrap: break-word;
 }
